Enable real admin CMS

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Kamadenu Goushala Admin</title>
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/decap-cms@3/dist/decap-cms.js"></script>
 </head>
 <body>
+  <p style="font-family: Arial, sans-serif; padding: 16px;">Loading admin panel...</p>
 </body>
 </html>
